--- a/about.html
+++ b/about.html
@@ -121,8 +121,8 @@
                     <img src="./images/tm3.jpg">
                 </div>
                 <div class="team_member-info">
-                    <h4>G.O</h4>
-                    <p>Lead Dev</p>
+                    <h4>Abiodun Frances</h4>
+                    <p>Senior Dev</p>
 
                 </div>
                 <div class="team_member-socials">
