--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
         <div class="container team_container">
             <article class="team_member">
                 <div class="team_member-image">
-                    <img src="./images/tm1.jpg">
+                    <img src="./images/tm1.jpg" alt="Olajide">
                 </div>
                 <div class="team_member-info">
                     <h4>Olajide Igbalaye</h4>
