--- a/about.html
+++ b/about.html
@@ -94,9 +94,10 @@
                     <p>C.T.O</p>
                 </div>
                 <div class="team_member-socials">
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/olajide-igbalaye/" target="_blank"><i
+                            class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://twitter.com/JideLence" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://web.facebook.com/gigsdev/" target="_blank"><i class="uil uil-facebook-f"></i></a>
 
                 </div>
             </article>
