--- a/index.html
+++ b/index.html
@@ -272,10 +272,11 @@
                     <p>hello@gigsdev.com</p>
                 </div>
                 <ul class="footer_socials">
-                    <li><a href="#"><i class="uil uil-facebook-f"></i></a></li>
+                    <li><a href="https://wwww.facebook.com/gigsdev/"><i class="uil uil-facebook-f"></i></a></li>
+                    <li><a href="https://www.twitter.com/JideLence"><i class="uil uil-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/olajide-igbalaye/"><i class="uil uil-linkedin-alt"></i></a>
                     <li><a href="#"><i class="uil uil-instagram-alt"></i></a></li>
-                    <li><a href="#"><i class="uil uil-twitter"></i></a></li>
-                    <li><a href="#"><i class="uil uil-linkedin-alt"></i></a></li>
+                    </li>
                 </ul>
             </div>
 
