--- a/courses.html
+++ b/courses.html
@@ -52,11 +52,11 @@
                     <img src="./images/course1.png">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Website Design</h4>
+                    <h4>Responsive Website Development</h4>
                     <p>Build responsive websites and applications that provides solutions, and also smart enough to
                         resize
                         and adapt its content based on the screen size of the device.</p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="https://forms.gle/8PR8k53weMGMM27R9" class="btn btn-primary">Enroll</a>
                 </div>
             </article>
             <article class="course">
@@ -64,11 +64,11 @@
                     <img src="./images/course2.jpg">
                 </div>
                 <div class="course_info">
-                    <h4>Computer Programming </h4>
-                    <p>Design and build executable computer programs using C, Python and Javascript.
+                    <h4>Mobile App Development</h4>
+                    <p>Design and build user centered mobile apps, programs using C, Python and Javascript.
                         Learn Computer algorithm and how to code for problem solving.
                     </p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="https://forms.gle/8PR8k53weMGMM27R9" class="btn btn-primary">Enroll</a>
                 </div>
             </article>
             <article class="course">
@@ -80,7 +80,7 @@
                     <p>Learn how to understand user needs and how to meet those needs through well researched solutions
                         and personal understanding of empathy. Design is an experience packaged through elements -
                         colours, shapes, lines, etc, in order to meet the need of the users.</p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="https://forms.gle/8PR8k53weMGMM27R9" class="btn btn-primary">Enroll</a>
                 </div>
             </article>
             <article class="course">
@@ -91,7 +91,7 @@
                     <h4>Digital Marketing</h4>
                     <p>Learn hwo to strategically help businesses, products and services reach thier target audience.
                         Learn to to use the various digital tools to connect the sellers to the buyers.</p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="https://forms.gle/8PR8k53weMGMM27R9" class="btn btn-primary">Enroll</a>
                 </div>
             </article>
             <article class="course">
@@ -102,7 +102,7 @@
                     <h4>Social Media Marketing</h4>
                     <p>Take advantage of the various booming social networking platforms for business publicity and
                         productivity.</p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="https://forms.gle/8PR8k53weMGMM27R9" class="btn btn-primary">Enroll</a>
                 </div>
             </article>
             <article class="course">
@@ -112,7 +112,7 @@
                 <div class="course_info">
                     <h4>Graphics Design</h4>
                     <p>Learn how to use various graphics tools to bring ideas to life.</p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="https://forms.gle/8PR8k53weMGMM27R9" class="btn btn-primary">Enroll</a>
                 </div>
             </article>
             <!--<article class="course">
