team SM add fix

--- a/about.html
+++ b/about.html
@@ -110,12 +110,12 @@
                     <p>Content Strategist</p>
 
                 </div>
-                <div class="team_member-socials">
+                <!--   <div class="team_member-socials">
                     <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
                     <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
                     <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
 
-                </div>
+                </div>-->
             </article>
             <article class="team_member">
                 <div class="team_member-image">
@@ -126,12 +126,12 @@
                     <p>Senior Dev</p>
 
                 </div>
-                <div class="team_member-socials">
+                <!-- <div class="team_member-socials">
                     <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
                     <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
                     <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
 
-                </div>
+                </div>-->
             </article>
             <article class="team_member">
                 <div class="team_member-image">
@@ -142,14 +142,14 @@
                     <p> Product Designer</p>
 
                 </div>
-                <div class="team_member-socials">
+                <!--      <div class="team_member-socials">
                     <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
                     <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>-->
 
-                </div>
-            </article>
-            <!-- <article class="team_member">
+        </div>
+        </article>
+        <!-- <article class="team_member">
                 <div class="team_member-image">
                     <img src="./images/tm5.jpg">
                 </div>
