blank target fix

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="categories_left">
                 <h1>What we do</h1>
                 <p>Technology solutions for your businesses. <br> Technology for your career goals. </p>
-                <a href="https://wa.me/07031098097" class="btn">Chat Now</a>
+                <a href="https://wa.me/07031098097" class="btn" target="_blank">Chat Now</a>
             </div>
             <div class="categories_right">
                 <article class="category">
