--- a/courses.html
+++ b/courses.html
@@ -273,9 +273,9 @@
             <div class="footer_3">
                 <h4>Privacy</h4>
                 <ul class="footer">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms and conditions</a></li>
-                    <li><a href="#">Refund Policy</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="T&C.html">Terms and conditions</a></li>
+                    <li><a href="disclaimer.html">Disclaimer</a></li>
                 </ul>
             </div>
             <div class="footer_4">
