--- a/courses.html
+++ b/courses.html
@@ -49,6 +49,16 @@
         <div class="container courses_container">
             <article class="course">
                 <div class="course_image">
+                    <img src="./images/course5.png">
+                </div>
+                <div class="course_info">
+                    <h4>Cybersecurity</h4>
+                    <p>Protect Your Digital Footprint | Secure Your Online Business | Safeguard Your Website, Safeguard Your Future | Defend Against Cyber Threats.</p>
+                    <a href="https://forms.gle/7VDNogRNiHTBQs6p8" class="btn btn-primary" target="_blank">Enroll</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
                     <img src="./images/course1.png">
                 </div>
                 <div class="course_info">
@@ -94,17 +104,7 @@
                     <a href="https://forms.gle/7VDNogRNiHTBQs6p8" class="btn btn-primary" target="_blank">Enroll</a>
                 </div>
             </article>
-            <article class="course">
-                <div class="course_image">
-                    <img src="./images/course5.jpg">
-                </div>
-                <div class="course_info">
-                    <h4>Social Media Marketing</h4>
-                    <p>Take advantage of the various booming social networking platforms for business publicity and
-                        productivity.</p>
-                    <a href="https://forms.gle/7VDNogRNiHTBQs6p8" class="btn btn-primary" target="_blank">Enroll</a>
-                </div>
-            </article>
+           
             <article class="course">
                 <div class="course_image">
                     <img src="./images/course6.jpg">
