--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             </div>
             <div class="categories_right">
                 <article class="category">
+                    <span class="category_icon"><i class="uil uil-palette"></i></span>
+                    <h5>Cybersecurity</h5>
+                    <p>Secure Internet</p>
+                </article>
+                <article class="category">
                     <span class="category_icon"><i class="uil uil-laptop-cloud"></i></span>
                     <h5>Web Development</h5>
                     <p>Going Global</p>
@@ -89,11 +94,7 @@
                     <h5>Digital Marketing</h5>
                     <p>The Economic Factor</p>
                 </article>
-                <article class="category">
-                    <span class="category_icon"><i class="uil uil-palette"></i></span>
-                    <h5>Graphics Design</h5>
-                    <p>Business Branding</p>
-                </article>
+                
                 <article class="category">
                     <span class="category_icon"><i class="uil uil-tachometer-fast-alt"></i></span>
                     <h5>Robotics</h5>
@@ -124,9 +125,8 @@
                     <img src="./images/course2.jpg">
                 </div>
                 <div class="course_info">
-                    <h4>Computer Programming </h4>
-                    <p>Design and build executable computer programs using C, Python and Javascript.
-                        Learn Computer algorithm and how to code for problem solving.
+                    <h4>Cybersecurity </h4>
+                    <p>Learn how to secure the internet. Protect Your Digital Footprint | Secure Your Online Business| Safeguard Your Website, Safeguard Your Future | Defend Against Cyber Threats.
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
